--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
 
     <!-- 2. 应用容器 (Iframe) -->
     <!-- 注意：这里填入你的真实链接 -->
-    <iframe id="frame-a" class="app-frame" src="https://xxx.github.io/xxx/"></iframe>
-    <iframe id="frame-b" class="app-frame" src="https://xxx.github.io/aa/"></iframe>
+    <iframe id="frame-a" class="app-frame" src="https://cx3300-1.github.io/ooooka/"></iframe>
+    <iframe id="frame-b" class="app-frame" src="https://cx3300-1.github.io/sfsfdf/"></iframe>
 
     <!-- 3. 悬浮按钮 (FAB) -->
     <div id="fab-container" class="fab-container">
