--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <!-- 2. 应用容器 (Iframe) -->
     <!-- 请替换这里的 src 为你的实际链接 -->
     <iframe id="frame-a" class="app-frame" src="https://cx3300-1.github.io/ooooka/"></iframe>
-    <iframe id="frame-b" class="app-frame" src="https://cx3300-1.github.io/sfsfdf/"></iframe>
+    <iframe id="frame-b" class="app-frame" src="https://kitty-0v0.github.io/-k-/"></iframe>
 
     <!-- 3. 悬浮按钮 (FAB) -->
     <div id="fab-container" class="fab-container">
