--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <!-- App B 页面 (全屏 Iframe) -->
     <div id="app-b" class="app-window">
         <!-- 替换为你需要的链接 -->
-        <iframe src="https://kitty-0v0.github.io/-k-/" class="app-iframe" title="App B"></iframe>
+        <iframe src="https://cx3300-1.github.io/sfsfdf/" class="app-iframe" title="App B"></iframe>
     </div>
 
     <!-- 悬浮按钮 -->
